# Iterative_methods

./: .gitignore  CMakeLists.txt  chol_run_strong_scalability copy.sh  chol_run_strong_scalability.sh  chol_run_weak_scalability.sh  error_1345853.txt  error_1345871.txt  error_1345873.txt  error_1345874.txt  error_1345875.txt  error_1345876.txt  error_1345877.txt  error_1345878.txt  error_1345880.txt  error_1345881.txt  error_1345882.txt  error_1345883.txt  error_1345884.txt  error_1345885.txt  error_1345887.txt  error_1345888.txt  error_1345889.txt  error_1345890.txt  error_1345891.txt  error_1345892.txt  error_1345893.txt  error_1345894.txt  error_1345895.txt  error_1345896.txt  error_1345897.txt  error_1345898.txt  error_1345899.txt  error_1345900.txt  error_1345901.txt  error_1345902.txt  error_1345903.txt  error_1345904.txt  error_1345905.txt  error_1345906.txt  error_1345907.txt  (+40 more)
attempts/: 2_jacobi_mpi_perf.cpp  2_jacobi_seq_perf.cpp  jac_accuracy.cpp  jac_seq.cpp  jac_seq_homogeneous_grid.cpp  jacobi_mpi.cpp  jacobi_sequential copy 2.cpp  run_jacobi_mpi_tests.sh
chol_meas/: strong_1345875.txt  strong_1345877.txt  strong_1345878.txt  strong_1345881.txt  strong_1345882.txt  strong_scalability.py  strong_scalability_measurements.csv  weak_1345897.txt  weak_1345898.txt  weak_1345905.txt  weak_1345917.txt  weak_scalability.py  weak_scalability_measurements.csv
chol_meas/strong_scalability/: extract_data.py  strong_1345880.txt  strong_1345883.txt  strong_1345884.txt  strong_1345885.txt  strong_1345891.txt  strong_1345894.txt  strong_1345896.txt
chol_meas/weak_scalability/: extract_data.py  weak_1345899.txt  weak_1345900.txt  weak_1345906.txt  weak_1345908.txt  weak_1345909.txt  weak_1345912.txt  weak_1345914.txt
cholesky_measurements/: test_chol.sh  test_chol_2.sh
cholesky_measurements/stong_scalability/: chol_run_strong_scalability.sh
solvers/: gauss_seidel_mpi.cpp  gauss_seidel_mpi.hpp  gauss_seidel_sequential.cpp  gauss_seidel_sequential.hpp  gauss_seidel_sequential_red_black.cpp  gauss_seidel_sequential_red_black.hpp  jacobi_mpi.cpp  jacobi_mpi.hpp  jacobi_sequential.cpp  jacobi_sequential.hpp  utils.hpp
study_cases/1_asymptotic_accuracy/: 1_asymptotic_accuracy.cpp  1_parameters.cpp  1_parameters.hpp  gauss_seidel_sequential_asymptotic_accuracy_on_mac.csv  jacobi_sequential_asymptotic_accuracy_on_mac.csv
study_cases/1_jacobi_seq_asymptotic_accuracy/: 1_jacobi_seq_asymptotic_accuracy.cpp
study_cases/1_jacobi_seq_asymptotic_accuracy/results/: display_accuracy.py  jacobi_sequential_asymptotic_accuracy.csv
study_cases/2_jacobi_performances/: 2_jacobi_mpi_strong_scalability.cpp  2_jacobi_seq_strong_scalability.cpp  2_jacobi_weak_scalability.cpp  2_strong_scalability_parameters.cpp  2_weak_scalability_parameters.cpp  run_jacobi_strong_scalability.sh  run_jacobi_weak_scalability.sh
study_cases/2_jacobi_performances/results/: jacobi_strong_scalability_results.csv  jacobi_weak_scalability_results.csv  mpi_performance_results.csv
study_cases/2_strong_scalability/: 2_parameters.cpp  2_parameters.hpp  2_strong_scalability.cpp  gauss_seidel_strong_scalability_on_mac.csv  jacobi_strong_scalability.csv  run_strong_scalability.sh
study_cases/3_weak_scalability/: 3_parameters.cpp  3_parameters.hpp  3_weak_scalability.cpp  gauss_seidel_weak_scalability.csv  jacobi_weak_scalability_on_mac.csv  run_weak_scalability.sh
visualization/: asymptotic_accuracy.py  display_accuracy.py  display_solution.py  strong_scalability.py  test_jacobi.py  vizualize_error.py  weak_scalability.py
